# brim

./: CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  install.sh  recipe-schema.json  test-packages.json
.github/workflows/: release.yml
examples/: test-recipe-2.json  test-recipe.json
scripts/: build:cross-compilation.sh
src/: main.rs
src/constants/: brew_consts.rs  mod.rs
src/models/: brew_package.rs  mod.rs
src/tests/: mod.rs
src/tests/unit_tests/: mod.rs
src/tui/: mod.rs  progress.rs
src/utilities/: brew_ensure.rs  brew_fetch_packages.rs  brew_formatting.rs  brew_install_packages.rs  brew_list_installed_packages.rs  brew_remove_packages.rs  brew_uninstall_packages.rs  file.rs  mod.rs  urls.rs
src/webhook/: mod.rs
