[package]
name = "brim"
version = "0.1.0"
edition = "2021"

# Additional metadata
authors = ["Alex Ghinea <alexandrughinea.dev+brim@gmail.com>"]
description = "A hassle-free tool for effortless installations. Enjoy seamless, customized integration with self managed remote lists, eliminating manual setup."
license = "Apache 2.0"
repository = "https://github.com/alexandrughinea/brim"
homepage = "https://github.com/alexandrughinea/brim"
keywords = ["rust", "cli", "brim"]
categories = ["command-line-utilities"]

# Cross-compilation targets
[target.x86_64-apple-darwin.dependencies]
[target.aarch64-apple-darwin.dependencies]
[target.x86_64-unknown-linux-gnu.dependencies]
[target.arm-unknown-linux-gnueabihf.dependencies]

[dependencies]
regex = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"]}
zeroize = "1.6.0"
clap="^4.3.21"
dialoguer = "0.10.4"
console = "^0.15.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.104"


