[package]
name = "brim"
version = "0.2.0"
edition = "2021"

# Additional metadata
authors = ["Alex Ghinea <alexandrughinea.dev+brim@gmail.com>"]
description = "A hassle-free tool for effortless installations. Enjoy seamless, customized integration with self managed remote lists, eliminating manual setup."
license = "Apache 2.0"
repository = "https://github.com/alexandrughinea/brim"
homepage = "https://github.com/alexandrughinea/brim"
keywords = ["rust", "cli", "brim"]
categories = ["command-line-utilities"]

# Cross-compilation targets
[target.x86_64-apple-darwin.dependencies]
[target.aarch64-apple-darwin.dependencies]
[target.x86_64-unknown-linux-gnu.dependencies]
[target.arm-unknown-linux-gnueabihf.dependencies]

[dependencies]
regex = "1.12"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"]}
zeroize = "1.8"
clap = "4.5"
inquire = "0.9"
console = "0.15.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.29"
crossterm = "0.28"


